--- a/aistore/apps/store/templates/product_detail.html
+++ b/aistore/apps/store/templates/product_detail.html
@@ -28,6 +28,7 @@
 <script>
 const productapp = Vue.createApp({
     delimiters: ['[[', ']]'],
+    store: store,
     data() {
         return {}
     },
@@ -55,6 +56,8 @@ const productapp = Vue.createApp({
             })
             .then(response => {
                 console.log(response)
+
+                this.$store.commit('increment', 1)
             })
             .catch(error => {
                 console.error('Error:', error)
@@ -62,7 +65,7 @@ const productapp = Vue.createApp({
         }
     }
 })
-
+productapp.use(store)
 productapp.mount('#productapp')
 </script>
 {% endblock %}
