--- a/aistore/apps/store/templates/product_detail.html
+++ b/aistore/apps/store/templates/product_detail.html
@@ -2,7 +2,15 @@
 {% block title %}{{ product.title }} | {% endblock %}
 {% block content %}
 <div id="productapp" class="max-w-3xl mx-auto bg-gray-900 rounded-2xl shadow-lg p-8 text-gray-200">
-    
+     <img 
+  {% if product.image %}
+    src="{{ product.image.url }}"
+  {% else %}
+    src="/path/to/default-placeholder.jpg"
+  {% endif %}
+  alt="{{ product.title }}" 
+  class="w-full h-80 object-cover rounded-2xl mb-4">
+
     <!-- Title -->
     <h1 class="text-3xl font-bold text-white">{{ product.title }}</h1>
     
