--- a/aistore/apps/cart/templates/cart.html
+++ b/aistore/apps/cart/templates/cart.html
@@ -36,9 +36,9 @@
             </tr>
             <tr>
                 <td class="px-1 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">Total </td>
-                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">{{ cart.get_total_length}}</td>
+                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">[[totalQuantity]]</td>
                 <td class="px-6 py-3 text-left text-xs font-medium text-gray-400 uppercase tracking-wider"></td>
-                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">{{ cart.get_total_cost}}</td>
+                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">[[totalCost]]</td>
             </tr>
         </tbody>
 
@@ -60,6 +60,12 @@ const productapp = Vue.createApp({
     products() {
       console.log('product pass')
         return this.$data.products
+    },
+    totalQuantity() {
+        return this.products.reduce((sum, p) => sum + p.quantity, 0);
+    },
+    totalCost() {
+        return this.products.reduce((sum, p) => sum + p.total_cost, 0);
     }
   },
     data() {
