--- a/aistore/apps/cart/templates/cart.html
+++ b/aistore/apps/cart/templates/cart.html
@@ -35,10 +35,9 @@
                 </td>
             </tr>
             <tr>
-                <td class="px-1 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">Total </td>
-                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">[[totalQuantity]]</td>
-                <td class="px-6 py-3 text-left text-xs font-medium text-gray-400 uppercase tracking-wider"></td>
-                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">[[totalCost]]</td>
+                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">Total </td>
+                <td class="px-12 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">[[totalQuantity]]</td>
+                <td class="px-6 py-3 text-left text-xl font-bold text-white-400 uppercase tracking-wider">[[totalCost]]৳</td>
             </tr>
         </tbody>
 
