--- a/aistore/apps/core/templates/base.html
+++ b/aistore/apps/core/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,9 @@
   
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <link rel="stylesheet" href="{% static 'main.css' %}">
+
 </head>
 <body class="bg-gray-950 text-gray-200 font-sans">
 
