--- a/aistore/apps/cart/templates/cart.html
+++ b/aistore/apps/cart/templates/cart.html
@@ -44,10 +44,11 @@
                 <span class="text-lg font-bold">Total Items: [[ totalQuantity ]]</span>
                 <span class="text-xl font-bold text-green-400">[[ totalCost ]]৳</span>
             </div>
-            <div v-if="coupon_value > 0" class="flex flex-row space-x-4 items-center">
-                <span class="text-lg font-bold text-cyan-400">[[ coupon_code ]] ([[ coupon_value ]]% off)</span>
+            <div v-if="coupon_value > 0" class="flex justify-between items-center">
+                <span class="text-lg font-bold">[[ coupon_code ]] ([[ coupon_value ]]% off)</span>
                 <span class="text-xl font-bold text-green-400">Total after discount: [[ totalCostWithCupon ]]৳</span>
             </div>
+            
             <div class="flex space-x-4 items-center">
                 <span class="text-lg font-bold">Have a coupon?</span>
                 <input type="text" v-model="coupon_code" placeholder="Enter coupon code"
@@ -94,10 +95,10 @@
                 </div>
             </div>
             <div class="flex justify-center mt-6">
-                <button type="submit"
-                    class="px-6 py-2 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-1 transition">
-                    Checkout
-                </button>
+                <button @click="buy"
+                class="px-6 py-2 bg-purple-600 text-white font-semibold rounded-lg shadow-md hover:bg-purple-700 transition">
+                Check out with Stripe
+            </button>
             </div>
         </form>
 
@@ -194,7 +195,8 @@ const productapp = Vue.createApp({
                 email: this.email,
                 address: this.address,
                 zipcode: this.zipcode,
-                place: this.place
+                place: this.place,
+                coupon_code: this.coupon_code
             };
             this.errors = [];
             if (!data.first_name) this.errors.push("First name is required");
