--- a/aistore/apps/store/templates/product_detail.html
+++ b/aistore/apps/store/templates/product_detail.html
@@ -82,6 +82,7 @@ const productapp = Vue.createApp({
     },
     mounted() {
         console.log("Mounted")
+        console.log(typeof null);
     },
     methods: {
         addToCart(product_id) {
